--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack serve --open --config webpack.demo.js",
-    "dev": "cross-env NODE_ENV=development webpack --config webpack.slider.jswebpack.demo.js",
-    "build": "cross-env NODE_ENV=production webpack --config webpack.slider.js webpack.demo.js",
-    "test": "npx jest"
+    "dev": "cross-env NODE_ENV=development webpack --mode development --config webpack.slider.js webpack.demo.js",
+    "build": "cross-env NODE_ENV=production webpack --mode production --config webpack.slider.js webpack.demo.js",
+    "test": "npx jest",
+    "eslint": "eslint . --ext .ts,.tsx"
   },
   "author": "",
   "license": "ISC",
@@ -15,7 +16,9 @@
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-typescript": "^7.15.0",
+    "@testing-library/jest-dom": "^5.14.1",
     "@types/jest": "^27.0.1",
+    "@types/jquery": "^3.5.6",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
     "babel-jest": "^27.0.6",
@@ -27,6 +30,9 @@
     "eslint-plugin-import": "^2.24.0",
     "eslint-webpack-plugin": "^3.0.1",
     "fork-ts-checker-webpack-plugin": "^6.3.2",
+    "handlebars": "^4.7.7",
+    "handlebars-jest": "^0.6.0",
+    "handlebars-loader": "^1.7.1",
     "html-webpack-plugin": "^5.3.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.6",
@@ -35,6 +41,7 @@
     "node-sass": "^6.0.1",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
+    "terser-webpack-plugin": "^5.1.4",
     "ts-jest": "^27.0.4",
     "ts-loader": "^9.2.5",
     "typescript": "^4.3.5",
