Настройка ts конфига

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,10 +9,11 @@
     "module": "es6",
     "target": "es5",
     "jsx": "react",
-    "allowJs": true
+    "allowJs": true,
+    "esModuleInterop": true
   },
   "exclude": [
-    "__mocks__",
+    "node_modules",
     "demo",
     "dist"
   ]
