--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@types/jest": "^27.0.1",
     "@types/jquery": "^3.5.6",
+    "@types/jsdom": "^16.2.13",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
     "babel-jest": "^27.0.6",
+    "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.2.0",
@@ -36,6 +38,7 @@
     "html-webpack-plugin": "^5.3.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.6",
+    "jest-environment-jsdom": "^27.0.6",
     "jquery": "^3.6.0",
     "mini-css-extract-plugin": "^2.2.0",
     "node-sass": "^6.0.1",
