--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/jest": "^27.0.1",
     "@types/jquery": "^3.5.6",
     "@types/jsdom": "^16.2.13",
+    "@types/webpack-env": "^1.16.3",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
     "babel-jest": "^27.0.6",
@@ -32,9 +33,6 @@
     "eslint-plugin-import": "^2.24.0",
     "eslint-webpack-plugin": "^3.0.1",
     "fork-ts-checker-webpack-plugin": "^6.3.2",
-    "handlebars": "^4.7.7",
-    "handlebars-jest": "^0.6.0",
-    "handlebars-loader": "^1.7.1",
     "html-webpack-plugin": "^5.3.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.6",
@@ -42,6 +40,8 @@
     "jquery": "^3.6.0",
     "mini-css-extract-plugin": "^2.2.0",
     "node-sass": "^6.0.1",
+    "pug": "^2.0.4",
+    "pug-loader": "^2.4.0",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
     "terser-webpack-plugin": "^5.1.4",
