Фикс демо-страницы под новые опции #8

--- a/src/demo/components/panel/components/panel-settings-form/utils/settingsListData.json
+++ b/src/demo/components/panel/components/panel-settings-form/utils/settingsListData.json
@@ -55,21 +55,16 @@
     ]
   },
   {
-    "title": "Type:",
+    "title": "Direction:",
     "inputs": [
       {
         "type": "radio",
-        "optionType": "from-start",
+        "optionType": "ltr",
         "name": "type"
       },
       {
         "type": "radio",
-        "optionType": "from-end",
-        "name": "type"
-      },
-      {
-        "type": "radio",
-        "optionType": "range",
+        "optionType": "rtl",
         "name": "type"
       }
     ]
